@@ -1,3 +1,8 @@
+Thu Aug  8 17:51:49 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/PerlACE/ProcessAndroid.pm:
+          Fix for shared library testing
+
 Thu Aug  8 15:17:27 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Basic_Types.h:
